deployments/ormos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ormos
  name: ormos
  namespace: ormos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ormos
  template:
    metadata:
      labels:
        app: ormos
    spec:
      containers:
      - image: toxicglados/ormos:latest
        name: ormos
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
