deployments/ormos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ormos-service
  namespace: ormos
spec:
  type: ClusterIP
  selector:
    app: ormos
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
